objects/Car__c.object
<CustomObject>
    <label>Car</label>
    <nameField>
        <label>Car Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cars</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Tax__c</fullName>
        <formula>IF( Length__c  &lt;= 3 ,  Car_cost__c  * 0.10, 
 IF( Length__c  &lt;= 6,  Car_cost__c  * 0.20, 
 IF( Length__c  &lt;= 10,  Car_cost__c  * 0.30, 
 IF( Length__c   &gt; 10 ,  Car_cost__c  * NULL,  
 IF(Length__c    &lt;= 0, Car_cost__c  * NULL,0)
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <label>Length</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Insured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Insured?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Car_cost__c</fullName>
        <label>Car cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Car_Brand__c</fullName>
        <label>Car Brand</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Toyota</fullName>
                </value>
                <value>
                    <fullName>Honda</fullName>
                </value>
                <value>
                    <fullName>Mercedes</fullName>
                </value>
                <value>
                    <fullName>BMW</fullName>
                </value>
                <value>
                    <fullName>Audi</fullName>
                </value>
                <value>
                    <fullName>Nissan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Car_Model__c</fullName>
        <label>Car Model</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Car_Brand__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Highlander</fullName>
                </value>
                <value>
                    <fullName>Camry</fullName>
                </value>
                <value>
                    <fullName>CRV</fullName>
                </value>
                <value>
                    <fullName>Civic</fullName>
                </value>
                <value>
                    <fullName>X5</fullName>
                </value>
                <value>
                    <fullName>X6</fullName>
                </value>
                <value>
                    <fullName>Corolla</fullName>
                </value>
                <value>
                    <fullName>Avalon</fullName>
                </value>
                <value>
                    <fullName>Prius</fullName>
                </value>
                <value>
                    <fullName>Pilot</fullName>
                </value>
                <value>
                    <fullName>Passport</fullName>
                </value>
                <value>
                    <fullName>HRV</fullName>
                </value>
                <value>
                    <fullName>A Class</fullName>
                </value>
                <value>
                    <fullName>G Class</fullName>
                </value>
                <value>
                    <fullName>E Class</fullName>
                </value>
                <value>
                    <fullName>S Class</fullName>
                </value>
                <value>
                    <fullName>CLA Class</fullName>
                </value>
                <value>
                    <fullName>X1</fullName>
                </value>
                <value>
                    <fullName>X7</fullName>
                </value>
                <value>
                    <fullName>X3</fullName>
                </value>
                <value>
                    <fullName>Q3</fullName>
                </value>
                <value>
                    <fullName>Q8</fullName>
                </value>
                <value>
                    <fullName>Q5</fullName>
                </value>
                <value>
                    <fullName>A7</fullName>
                </value>
                <value>
                    <fullName>A8</fullName>
                </value>
                <value>
                    <fullName>Q7</fullName>
                </value>
                <value>
                    <fullName>X-trail</fullName>
                </value>
                <value>
                    <fullName>Qashqai</fullName>
                </value>
                <value>
                    <fullName>Serena</fullName>
                </value>
                <value>
                    <fullName>Maxima</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_cost__c</fullName>
        <formula>Car_cost__c  +  Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Car_Company__c</fullName>
        <label>Car Company</label>
        <referenceTo>Car_Company__c</referenceTo>
        <relationshipLabel>Cars</relationshipLabel>
        <relationshipName>Cars</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Purchase_date__c</fullName>
        <label>Purchase date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Registration_number__c</fullName>
        <label>Registration number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>